--- a/src/app/components/product-page/product-page.component.html
+++ b/src/app/components/product-page/product-page.component.html
@@ -1,34 +1,52 @@
-<div class="card flex flex-wrap gap-6 items-center justify-between">
-    <p-button class="upload-btn" label="Import Excel" icon="pi pi-upload" (click)="openDialog()" severity="danger" />
+<div class="action">
+    <div class="card flex flex-wrap gap-6 items-center justify-between">
+        <p-button class="upload-btn" label="Import Excel" icon="pi pi-upload" (click)="openDialog()"
+            severity="danger" />
+    </div>
+
+    <div class="card flex flex-wrap gap-6 items-center justify-between">
+        <p-button class="export-btn" label="Export Excel" icon="pi pi-download" (click)="handleExport()"
+            severity="success" />
+    </div>
+
 </div>
 
-<app-dialog *ngIf="showDialog" (close)="closeDialog()" (dataImported)="onDataImported($event)"></app-dialog>
 
-<p-table [value]="products" [(selection)]="selectedProducts" dataKey="id" [tableStyle]="{'min-width': '50rem'}">
-    <ng-template #header>
-        <tr>
-            <th style="width: 4rem"><p-tableHeaderCheckbox /></th>
-            <th>Id</th>
-            <th>Product Name</th>
-            <th>Images</th>
-            <th>Description</th>
-            <th>Price</th>
-            <th>Stock</th>
+<app-dialog *ngIf="showDialog" [mode]="dialogMode" [exportData]="selectedProducts" (close)="closeDialog()"
+    (dataImported)="onDataImported($event)"></app-dialog>
 
-        </tr>
-    </ng-template>
-    <ng-template #body let-product>
-        <tr>
-            <td>
-                <p-tableCheckbox [value]="product" />
-            </td>
-            <td>{{product.id}}</td>
-            <td>{{product.productName}}</td>
-            <td><img [src]="product.images" [alt]="product.productName" width="50" class="shadow-lg" /></td>
-            <td>{{product.description}}</td>
-            <td>{{product.price}}</td>
-            <td>{{product.stock}}</td>
+<div class="card">
+    <p-table [value]="products" [(selection)]="selectedProducts" dataKey="id" [tableStyle]="{'min-width': '50rem'}">
+        <ng-template #header>
+            <tr>
+                <th style="width: 3rem">
+                    <!-- Checkbox chọn tất cả -->
+                    <input type="checkbox" class="checkbox-table" [checked]="isAllSelected()"
+                        (change)="toggleAll($event)" />
+                </th>
+                <th>Id</th>
+                <th>Product Name</th>
+                <th>Images</th>
+                <th>Description</th>
+                <th>Price</th>
+                <th>Stock</th>
 
-        </tr>
-    </ng-template>
-</p-table>
+            </tr>
+        </ng-template>
+        <ng-template #body let-product>
+            <tr>
+                <td>
+                    <input type="checkbox" class="checkbox-table" [checked]="isSelected(product)"
+                        (change)="toggleSelection(product, $event)" />
+                </td>
+                <td>{{product.id}}</td>
+                <td>{{product.productName}}</td>
+                <td><img [src]="product.images" [alt]="product.productName" width="50" class="shadow-lg" /></td>
+                <td>{{product.description}}</td>
+                <td>{{product.price}}</td>
+                <td>{{product.stock}}</td>
+
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
