--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -50,6 +50,8 @@
                         <th>Description</th>
                         <th>Price</th>
                         <th>Stock</th>
+                        <th>Created At</th>
+                        <th>Is Active</th>
                     </tr>
                 </ng-template>
                 <ng-template #body let-product>
@@ -60,6 +62,8 @@
                         <td>{{product.description}}</td>
                         <td>{{product.price}}</td>
                         <td>{{product.stock}}</td>
+                        <td>{{product.createdAt | date:'dd/MM/yyyy'}}</td>
+                        <td>{{product.isActive}}</td>
                     </tr>
                 </ng-template>
             </p-table>
