--- a/src/app/components/product-page/product-page.component.html
+++ b/src/app/components/product-page/product-page.component.html
@@ -30,6 +30,8 @@
                 <th>Description</th>
                 <th>Price</th>
                 <th>Stock</th>
+                <th>Created At</th>
+                <th>Is Active</th>
 
             </tr>
         </ng-template>
@@ -45,7 +47,8 @@
                 <td>{{product.description}}</td>
                 <td>{{product.price}}</td>
                 <td>{{product.stock}}</td>
-
+                <td>{{product.createdAt | date:'dd/MM/yyyy'}}</td>
+                <td>{{product.isActive}}</td>
             </tr>
         </ng-template>
     </p-table>
